[gd_scene load_steps=5 format=3 uid="uid://c8c532an1nmkn"]

[ext_resource type="Theme" uid="uid://bimvjqmjjj4jh" path="res://assets/resources/theme/main.tres" id="1_pgf68"]
[ext_resource type="Script" uid="uid://dndnmx0g05dux" path="res://scr/user_interface/toast/toast.gd" id="2_1goa3"]
[ext_resource type="Texture2D" uid="uid://3cxxjt1mj38b" path="res://assets/textures/icons/info.svg" id="3_evl8l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5ah8o"]

[node name="Toast" type="PanelContainer"]
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.943
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -95.0
offset_top = 2.03992
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_pgf68")
theme_type_variation = &"WhitePanel"
script = ExtResource("2_1goa3")

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 2
theme_type_variation = &"ToastProgressBar"
max_value = 1.0
value = 0.4
show_percentage = false

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 6
custom_minimum_size = Vector2(18, 0)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_evl8l")
expand_mode = 1
stretch_mode = 5

[node name="VSeparator" type="VSeparator" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_5ah8o")

[node name="TitleLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "im a toast"
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
